...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.007"
            app:srcCompat="@mipmap/sound_wave_layer" />


        <ImageView
            android:id="@+id/chartButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_monitoring"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/sentio_logo"
...
